# coursework3

./: .gitignore  README.md  main.py  operation.py  pyproject.toml  utils.py
src/: main.py  operation.py  utils.py
tests/: test_main.py  test_operation.py  test_utils.py
