[tool.poetry]
name = "course-work3"
version = "0.1.0"
description = ""
authors = ["Kostin Igor <grizzlygit777@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
pylint = "^3.2.2"
black = "^24.4.2"
mypy = "^1.10.0"
isort = "^5.13.2"


[tool.poetry.group.test.dependencies]
pytest = "^8.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
